# rag_chatbot

./: app.py  pyproject.toml  rag_engine.py  rag_engine2.ipynb  requirements.txt
.streamlit/: config.toml
rag/: pyvenv.cfg
